[package]
name = "rusty_enet"
version = "0.1.0"
edition = "2021"
description = "ENet for Rust (and wasm!) transpiled from C."
homepage = "https://github.com/jabuwu/rusty_net"
repository = "https://github.com/jabuwu/rusty_net"
readme = "README.md"
license = "MIT"
exclude = [
    "/.github",
    "/ci",
    "/examples",
]

[target.'cfg(target_arch = "wasm32")'.dependencies]
js-sys = "0.3.69"

[dev-dependencies]
rand = "0.8.5"
rand_chacha = "0.3.1"

[workspace]
resolver = "2"
members = [
    "ci"
]
