[package]
name = "rusty_enet"
version = "0.3.3"
edition = "2021"
description = "ENet for Rust (and wasm!) transpiled from C."
homepage = "https://github.com/jabuwu/rusty_enet"
repository = "https://github.com/jabuwu/rusty_enet"
readme = "README.md"
license = "MIT"
rust-version = "1.77"
exclude = [
    "/.github",
    "/ci",
    "/examples",
]

[features]
default = ["std"]
std = []
connected = []

[target.'cfg(target_arch = "wasm32")'.dependencies]
js-sys = "0.3.69"

[dev-dependencies]
rand = "0.9"
rand_chacha = "0.9"

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[workspace]
resolver = "2"
members = [
    "ci"
]
